fix wrong size of button icon in safari

--- a/src/styles/desktop/global.scss
+++ b/src/styles/desktop/global.scss
@@ -217,6 +217,17 @@ input[type=number] {
     }
 }
 
+.v-btn {
+    .v-btn__prepend,
+    .v-btn__append {
+        .v-icon {
+            .v-icon__svg {
+                width: 1em;
+            }
+        }
+    }
+}
+
 .w-100-window-container.v-window > .v-window__container {
     width: 100%;
 }
